feat: send form data to controller

--- a/src/main/resources/templates/firstPage.html
+++ b/src/main/resources/templates/firstPage.html
@@ -6,5 +6,11 @@
 
     <body>
         <p th:text="${mensagemController}"></p>
+
+        <form method="post" th:action="@{/create}">
+            nome do candidato: <input type="text" name="candidate_name">
+            <br />
+            <button>cadastrar candidato</button>
+        </form>
     </body>
 </html>
