feat: add RestTemplate for external API access

--- a/src/main/resources/templates/candidate/login.html
+++ b/src/main/resources/templates/candidate/login.html
@@ -8,18 +8,24 @@
 </head>
 
 <body class="bg-gray-900 h-screen items-center flex justify-center">
-    <form action="" class="flex gap-24">
+    <form action="" class="flex gap-24" th:action="@{/candidate/signIn}" method="post">
         <div class="text-white max-w-80 text-6xl flex items-center">
             Gestão de Vagas
         </div>
         <div class="space-y-8 bg-zinc-950 roundend-md p-20">
+
             <input type="text" name="username"
-                class="bg-gray-100 text-gray-900 text-xd rounded w-96 block p-4 focus:outline-none focus:ring-purple-600 focus:ring-2"
+                class="bg-gray-100 text-gray-900 text-xd rounded w-96 block p-3 focus:outline-none focus:ring-purple-600 focus:ring-2"
                    placeholder="Usuário">
+
             <input type="password" name="password"
-                   class="bg-gray-100 text-gray-900 text-xd rounded w-96 block p-4 focus:outline-none focus:ring-purple-600 focus:ring-2"
+                   class="bg-gray-100 text-gray-900 text-xd rounded w-96 block p-3 focus:outline-none focus:ring-purple-600 focus:ring-2"
                    placeholder="Senha">
+
+            <p class="text-red-400" th:if="${error_message}" th:text="${error_message}"></p>
+
             <button class="bg-purple-900 w-96 p-4 rounded text-white hover:bg-purple-700">Entrar</button>
+
             <a href="" class="block text-center text-purple-700 underline underline-offset-2 hover:text-purple-600">Crie sua conta </a>
         </div>
     </form>
