--- a/src/main/resources/templates/candidate/profile.html
+++ b/src/main/resources/templates/candidate/profile.html
@@ -27,7 +27,7 @@
             </div>
             <div class="justify-between w-full flex">
                 <span class="text-base text-gray-300 font-bold">Usuário:</span>
-                <span class="text-base text-gray-300">diogow</span>
+                <span class="text-base text-gray-300">diogo</span>
             </div>
             <div class="justify-between w-full flex">
                 <span class="text-base text-gray-300 font-bold">Email:</span>
