--- a/src/main/resources/templates/candidate/profile.html
+++ b/src/main/resources/templates/candidate/profile.html
@@ -22,7 +22,7 @@
     <div class="container mx-auto mt-8">
         <div class="bg-gray-800 p-8 rounded-lg shadow-md">
 
-            <h1 class="text-2xl font-bold text-gray-100 text-center mb-8" th:text="${user.name}></h1>
+            <h1 class="text-2xl font-bold text-gray-100 text-center mb-8" th:text="${user.name}"></h1>
 
             <form th:object="${user}">
                 <div class="text-center mb-4">
