--- a/src/main/resources/templates/candidate/jobs.html
+++ b/src/main/resources/templates/candidate/jobs.html
@@ -20,7 +20,7 @@
         </nav>
 
         <div class="container mx-auto mt-8 text-center">
-            <form action="">
+            <form>
                 <input type="text" name="filter"
                     class="bg-gray-50 text-gray-500 rounded w-96 p-3 focus:outline-none"
                     placeholder="Busca de vaga"
