--- a/src/main/resources/templates/candidate/create.html
+++ b/src/main/resources/templates/candidate/create.html
@@ -8,7 +8,7 @@
 </head>
 
 <body class="bg-gray-900 h-screen items-center flex justify-center">
-    <form id="submitForm" action="" class="flex gap-24" th:action="@{/candidate/signIn}" method="post">
+    <form id="submitForm" action="" class="flex gap-24" th:action="@{/candidate/create}" method="post" th:object="${candidate}">
 
         <div class="space-y-8 bg-zinc-900 roundend-md p-20 justify-items-center">
 
@@ -16,18 +16,22 @@
 
             <input type="text" name="name"
                    class="bg-gray-100 text-gray-900 text-xd rounded w-96 block p-3 focus:outline-none focus:ring-purple-600 focus:ring-2"
+                   th:field="*{name}"
                    placeholder="Digite o seu nome">
 
             <input type="email" name="email"
                    class="bg-gray-100 text-gray-900 text-xd rounded w-96 block p-3 focus:outline-none focus:ring-purple-600 focus:ring-2"
+                   th:field="*{email}"
                    placeholder="Digite o seu email">
 
             <input type="text" name="username"
                    class="bg-gray-100 text-gray-900 text-xd rounded w-96 block p-3 focus:outline-none focus:ring-purple-600 focus:ring-2"
+                   th:field="*{username}"
                    placeholder="Digite o seu usuário">
 
             <input type="password" name="password" id="password"
                    class="bg-gray-100 text-gray-900 text-xd rounded w-96 block p-3 focus:outline-none focus:ring-purple-600 focus:ring-2"
+                   th:field="*{password}"
                    placeholder="Senha">
 
             <input type="password" name="password" id="confirmPassword"
@@ -36,6 +40,7 @@
 
             <textarea name="description"
                       class="bg-gray-100 text-gray-900 text-xd rounded w-96 block p-3 focus:outline-none focus:ring-purple-600 focus:ring-2"
+                      th:field="*{description}"
                       placeholder="Digite uma breve descrição sobre você"></textarea>
 
             <p class="text-red-400 hidden" id="password_error">As senhas não conferem!</p>
