--- a/src/main/resources/templates/candidate/create.html
+++ b/src/main/resources/templates/candidate/create.html
@@ -45,6 +45,8 @@
 
             <p class="text-red-400 hidden" id="password_error">As senhas não conferem!</p>
 
+            <p class="text-red-400 text-center" th:if="${error_message}" th:text="${error_message}"></p>
+
             <button class="bg-purple-900 w-96 p-4 rounded text-white hover:bg-purple-700 block">Cadastra-se</button>
 
             <a href="/candidate/login" class="block text-center text-purple-700 underline underline-offset-2 hover:text-purple-600 block">Já possui conta? Clique aqui.</a>
