--- a/src/main/resources/templates/candidate/create.html
+++ b/src/main/resources/templates/candidate/create.html
@@ -34,7 +34,7 @@
                    th:field="*{password}"
                    placeholder="Senha">
 
-            <input type="password" name="password" id="confirmPassword"
+            <input type="password" name="confirmPassword" id="confirmPassword"
                    class="bg-gray-100 text-gray-900 text-xd rounded w-96 block p-3 focus:outline-none focus:ring-purple-600 focus:ring-2"
                    placeholder="Confirme sua senha">
 
