style: improve company register layout

--- a/src/main/resources/templates/candidate/create.html
+++ b/src/main/resources/templates/candidate/create.html
@@ -12,7 +12,7 @@
 
         <div class="space-y-8 bg-zinc-900 roundend-md p-20 justify-items-center">
 
-            <p class="text-white">Olá futuro candidato, crie o seu cadastro gratuitamente!</p>
+            <p class="text-white">Olá, futuro candidato! Crie o seu cadastro gratuitamente!</p>
 
             <input type="text" name="name"
                    class="bg-gray-100 text-gray-900 text-xd rounded w-96 block p-3 focus:outline-none focus:ring-purple-600 focus:ring-2"
@@ -49,7 +49,7 @@
 
             <button class="bg-purple-900 w-96 p-4 rounded text-white hover:bg-purple-700 block">Cadastra-se</button>
 
-            <a href="/candidate/login" class="block text-center text-purple-700 underline underline-offset-2 hover:text-purple-600 block">Já possui conta? Clique aqui.</a>
+            <a href="/candidate/login" class="block text-center text-purple-700 underline underline-offset-2 hover:text-purple-600 block no-underline">Já possui conta? Clique aqui.</a>
         </div>
         <div class="text-white text-center max-w-80 text-6xl flex items-center">
             Gestão de Vagas
