feat: page: company jobs

--- a/src/main/resources/templates/candidate/login.html
+++ b/src/main/resources/templates/candidate/login.html
@@ -26,7 +26,9 @@
 
             <button class="bg-purple-900 w-96 p-4 rounded text-white hover:bg-purple-700">Entrar</button>
 
-            <a href="/candidate/create" class="block text-center text-purple-700 underline underline-offset-2 hover:text-purple-600">Não possui conta? Clique aqui.</a>
+            <p class="mt-4 text-white text-center">
+                Não possui uma conta cadastrada? <a href="/company/create" class="text-center text-purple-700 underline underline-offset-2 hover:text-purple-600 no-underline">Clique aqui.</a>
+            </p>
         </div>
     </form>
 </body>
