--- a/src/main/resources/templates/company/create.html
+++ b/src/main/resources/templates/company/create.html
@@ -63,7 +63,7 @@
 
     </div>
     <div class="text-white text-center max-w-80 text-6xl flex items-center">
-        Gestão de Vagas
+        Gestão de Vagas Company Version
     </div>
 </form>
 </body>
