--- a/src/main/resources/templates/company/jobs.html
+++ b/src/main/resources/templates/company/jobs.html
@@ -7,7 +7,15 @@
     <title>Cadastro de Vagas</title>
 </head>
 
-<body class="bg-sky-950 h-screen items-center flex justify-center">
+<body class="bg-white h-screen flex flex-col">
 
+    <nav class="bg-zinc-900 p-4 flex justify-between items-center">
+        <div>
+            <a href="" class="text-white text-lg font-semibold">Vagas</a>
+        </div>
+        <div>
+            <a href="" class="text-white text-lg font-semibold">Logout</a>
+        </div>
+    </nav>
 </body>
 </html>
