--- a/src/main/resources/templates/company/jobs.html
+++ b/src/main/resources/templates/company/jobs.html
@@ -17,5 +17,20 @@
             <a href="" class="text-white text-lg font-semibold">Logout</a>
         </div>
     </nav>
+
+    <div class="flex-grow flex items-center justify-center">
+        <div class="bg-gray-200 rounded-lg p-8 w-3/4 max-w-xl shadow-lg">
+            <h1 class="text-gray800 text-3xl mb-6 text-center">Cadastro de vagas</h1>
+
+            <form action="" class="space-y-4">
+                <div>
+                    <label for="" class="text-gray-700">Descrição da vaga</label>
+                    <input type="text"
+                           placeholder="Ex: Desenvolvedor Full Stack"
+                           class="w-full bg-gray-100 text-gray-800 text-lg rounded p-2 focus:outline-none focus:ring-purple-600 focus:ring-2">
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
