--- a/src/main/resources/templates/company/login.html
+++ b/src/main/resources/templates/company/login.html
@@ -26,7 +26,7 @@
 
         <button class="bg-purple-900 w-96 p-4 rounded text-white hover:bg-purple-700">Entrar</button>
 
-        <p class="mt-4 text-white">
+        <p class="mt-4 text-white text-center">
             Não possui uma empresa cadastrada? <a href="/company/create" class="text-center text-purple-700 underline underline-offset-2 hover:text-purple-600 no-underline">Clique aqui.</a>
         </p>
 
