--- a/src/main/resources/templates/company/jobs.html
+++ b/src/main/resources/templates/company/jobs.html
@@ -9,14 +9,17 @@
 
 <body class="bg-white h-screen flex flex-col">
 
-    <nav class="bg-zinc-900 p-4 flex justify-between items-center">
-        <div>
-            <a href="" class="text-white text-lg font-semibold">Vagas</a>
-        </div>
-        <div>
-            <a href="" class="text-white text-lg font-semibold">Logout</a>
-        </div>
-    </nav>
+<nav class="bg-zinc-900 p-4 flex justify-between items-center">
+    <div>
+        <a href="/company/jobs" class="text-white text-lg font-semibold">Cadastro</a>
+    </div>
+    <div>
+        <a href="/company/jobs/list" class="text-white text-lg font-semibold">Listagem</a>
+    </div>
+    <div>
+        <a href="/company/jobs/logout" class="text-white text-lg font-semibold">Logout</a>
+    </div>
+</nav>
 
     <div class="flex-grow flex items-center justify-center">
         <div class="bg-gray-200 rounded-lg p-8 w-3/4 max-w-xl shadow-lg">
